--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "node-notifier": "^4.2.1",
+    "node-slack": "0.0.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "reactify": "^1.1.0",
