--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gulp-server-livereload": "1.3.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "history": "^1.17.0",
     "node-notifier": "^4.2.1",
     "node-slack": "0.0.7",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^1.0.3",
     "reactify": "^1.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
